Makes code ready for Java 9 by removing calls to deprecated methods.